<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="loginBtn">Login</string>
    <string name="username_tag">User Name:</string>
    <string name="password_tag">Password:</string>
    <string name="password_hint">Enter password</string>
    <string name="username_hint">Enter username</string>
    <string name="login_title">WELCOME BACK!</string>
    <string name="click_here_link"><u>Click Here</u></string>
    <string name="not_registered">Not registered?</string>
    <string name="to_register">to register</string>
    <string name="register_title">WELCOME!</string>
    <string name="display_name_tag">Display Name:</string>
    <string name="display_name_hint">Enter name</string>
    <string name="confirm_password_tag">Confirm Password:</string>
    <string name="confirm_password_hint">Repeat password</string>
    <string name="upload_photo_btn">Upload a profile picture here:</string>
    <string name="registerBtn">Register</string>
    <string name="already_registered">Already registered?</string>
    <string name="to_login">to login</string>
    <string name="profile_picture">profile picture</string>
    <string name="enter_your_message_here">Enter your message here..</string>
    <string name="dummy_msg">This is a message</string>
    <string name="search_or_create_a_new_chat">Search or create a new chat</string>
    <string name="user_name">User Name</string>
    <string name="new_message">new message</string>
    <string name="add_new_chat">Got a new friend?\nLet\'s add him!</string>
    <string name="cancelBtn">Cancel</string>
    <string name="confirmBtn">Confirm</string>
    <string name="logoutBtn">Logout</string>
    <string name="current_username">current username</string>
    <string name="current_display_name">current display name</string>
    <string name="server_port">Server Port:</string>
    <string name="new_server_port">new server port</string>
    <string name="current_password">current password</string>
    <string name="settings">Settings</string>
    <string name="update_photo_btn">Update\nProfile Picture</string>
    <string name="language">Language:</string>
    <string name="theme">Theme:</string>
    <string name="app_name" translatable="false">OurWhatsapp</string>
    <string name="login_to_see_more_options">Login to see more options</string>
    <string-array name="language_options">
        <item>English</item>
        <item>Hebrew</item>
    </string-array>
    <string-array name="theme_options">
        <item>Classic</item>
        <item>Dark</item>
    </string-array>
</resources>