<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/settingsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:gravity="center"
            android:textColor="@color/textColor"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:text="@string/settings" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/uploadImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="casual"
                android:text="@string/update_photo_btn"
                android:textSize="18sp"
                android:textColor="@color/textColor"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/fab_margin" />

            <ImageView
                android:id="@+id/photo_image_view"
                android:layout_width="85dp"
                android:layout_height="78dp"
                android:layout_gravity="center"
                android:clickable="true"
                android:src="@drawable/default_img"
                tools:ignore="SpeakableTextPresentCheck"
                android:contentDescription="@string/profile_picture"
                android:focusable="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/usernameTag"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:fontFamily="casual"
                android:gravity="center"
                android:text="@string/username_tag"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="casual"
                android:gravity="center"
                android:hint="@string/current_username"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/textColor"
                android:textColorHint="@color/hintColor"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/passwordTag"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:fontFamily="casual"
                android:gravity="center"
                android:text="@string/password_tag"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="casual"
                android:gravity="center"
                android:hint="@string/current_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColor="@color/textColor"
                android:textColorHint="@color/hintColor"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/displayNameTag"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:fontFamily="casual"
                android:gravity="center"
                android:text="@string/display_name_tag"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/displayName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="casual"
                android:gravity="center"
                android:hint="@string/current_display_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/textColor"
                android:textColorHint="@color/hintColor"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/serverTag"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:fontFamily="casual"
                android:gravity="center"
                android:text="@string/server_port"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/serverPort"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="casual"
                android:gravity="center"
                android:hint="@string/current_server_port"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/textColor"
                android:textColorHint="@color/hintColor"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>


        <Button
            android:id="@+id/exitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="#534A4A"
            android:fontFamily="casual"
            android:text="@string/exitBtn"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>