<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:text="@string/login_title"
                android:textColor="@color/black"
                android:textSize="50sp"
                android:textStyle="bold"
                android:layout_marginBottom="@android:dimen/notification_large_icon_height"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/user_name_tag" />

            <EditText
                android:id="@+id/loginUsername"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:fontFamily="casual"
                android:hint="@string/username_hint"
                android:inputType="textPersonName"
                android:text="Centered Text"
                android:textColor="@color/black"
                android:textColorHighlight="#000000"
                android:textColorHint="#656262"
                android:textColorLink="#131313" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/fab_margin"
                android:text="@string/password_tag" />

            <EditText
                android:id="@+id/loginPassword"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:fontFamily="casual"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:text="Centered Text"
                android:textColor="#070707"
                android:textColorHighlight="#121111"
                android:textColorHint="#656262"
                android:textColorLink="#070707" />

            <Button
                android:id="@+id/show_list_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:layout_marginBottom="@android:dimen/notification_large_icon_height"
                android:backgroundTint="#534A4A"
                android:fontFamily="casual"
                android:text="@string/loginBtn"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:text="@string/not_registed"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/navToRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:fontFamily="monospace"
                    android:text="@string/click_here_link"
                    android:textColor="@color/black"
                    android:padding="3dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.53"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/show_list_button"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:text="@string/to_register"
                    android:textColor="@color/black" />
            </LinearLayout>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.motion.widget.MotionLayout>