<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    android:gravity="center"
    tools:context=".AddNewChatActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:gravity="center"
            android:textColor="@color/textColor"
            android:textSize="40sp"
            android:textStyle="bold"
            android:text="@string/add_new_chat" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/displayName"
                android:layout_width="wrap_content"
                android:layout_height="58dp"
                android:layout_marginTop="7dp"
                android:fontFamily="casual"
                android:gravity="center"
                android:hint="@string/display_name_hint"
                android:inputType="text"
                android:textColor="@color/textColor"
                android:textColorHint="@color/hintColor"
                android:textSize="28sp"
                tools:ignore="Autofill,TextContrastCheck" />

            <Button
                android:id="@+id/addBtn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="1dp"
                android:background="@drawable/ic_create" />


        </LinearLayout>


        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/btn"
            android:fontFamily="casual"
            android:text="@string/cancelBtn"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

